added charity page and added more pages to layout

--- a/Pages/Habitat.cshtml
+++ b/Pages/Habitat.cshtml
@@ -4,4 +4,5 @@
 }
 <p>The arctic fox lives within Arctic and alpine tundra, in coastal areas, on ice floes, and nore of the tree line</p>
 <br />
-<p> The Arctic fox has a circumpolar range and is found in the tundra extending through the northernmost regions of Europe, Asia, North America, Greenland, and Iceland. In North America, the Arctic fox is found from western Alaska east through northern Canada, including portions of the Northwest Territories, Alberta, Manitoba, and Quebec.</p>
+<p> The Arctic fox has a circumpolar range and is found in the tundra extending through the northernmost regions of Europe, Asia, North America, Greenland, and Iceland. In North America. </p><br />
+   <p> the Arctic fox is found from western Alaska east through northern Canada, including portions of the Northwest Territories, Alberta, Manitoba, and Quebec.</p>
