added pictures to photo gallery

--- a/Pages/Habitat.cshtml
+++ b/Pages/Habitat.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model Individual_Project.Pages.HabitatModel
 @{
+    ViewData["Title"] = "Habitat";
 }
 <p>The arctic fox lives within Arctic and alpine tundra, in coastal areas, on ice floes, and nore of the tree line</p>
 <br />
