--- a/Pages/donation.cshtml
+++ b/Pages/donation.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model Individual_Project.Pages.donationModel
 @{
+    ViewData["Title"] = "Charity";
 }
 <h1>charities or donations</h1>
 <p>https://www.arcticfoxdaily.com/</p>
