--- a/Pages/information.cshtml
+++ b/Pages/information.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model Individual_Project.Pages.informationModel
 @{
+    ViewData["Title"] = "Info";
 }
 <h1>Information on the Arctic Fox</h1>
 <h3>life span</h3>
