--- a/Pages/Habitat.cshtml
+++ b/Pages/Habitat.cshtml
@@ -3,7 +3,21 @@
 @{
     ViewData["Title"] = "Habitat";
 }
-<p>The arctic fox lives within Arctic and alpine tundra, in coastal areas, on ice floes, and nore of the tree line</p>
-<br />
-<p> The Arctic fox has a circumpolar range and is found in the tundra extending through the northernmost regions of Europe, Asia, North America, Greenland, and Iceland. In North America. </p><br />
-   <p> the Arctic fox is found from western Alaska east through northern Canada, including portions of the Northwest Territories, Alberta, Manitoba, and Quebec.</p>
+
+<body style="background-color: #d3e7fa;">
+    <h1> Habitat</h1>
+    <p>The arctic fox lives within Arctic and alpine tundra, in coastal areas, on ice floes, and nore of the tree line</p>
+    <br />
+    <p> The Arctic fox has a circumpolar range and is found in the tundra extending through the northernmost regions of Europe, Asia, North America, Greenland, and Iceland. In North America. </p>
+    <br />
+    <p> the Arctic fox is found from western Alaska east through northern Canada, including portions of the Northwest Territories, Alberta, Manitoba, and Quebec.</p>
+    <br />
+    <p>treeless coastal areas of Alaska from the Aleutian Islands north to Point Barrow and east to the Canada border</p>
+    <br />
+    <p> temperatures as low as -58F</p>
+    <br />
+    <p>they make thier dens by digging under snow and ice</p>
+    <br />
+    <p> due to human influence on the environment arctic foxes no longer fear people ans have begun settling in urban areas</p>
+
+</body>
