--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -3,8 +3,12 @@
 @{
     ViewData["Title"] = "Home page";
 }
+<body style="background-color: #d3e7fa;">
+    <div class="text-center">
+        <h1 class="display-4">Arctic Fox</h1>
+        <p> heres some great stuff about the arctic fox</p>
+        <br />
 
-<div class="text-center">
-    <h1 class="display-4">Arctic Fox</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+        <img src="https://a-z-animals.com/media/animals/images/original/arctic_fox_12.jpg" alt="artic fox" width="1000" height="600">
+    </div>
+</body>
