--- a/Pages/refer.cshtml
+++ b/Pages/refer.cshtml
@@ -3,11 +3,12 @@
 @{
 
 }
+<body style="background-color: #d3e7fa;">
+    <h1> references </h1>
+    <ol>
+        <li>https://kids.nationalgeographic.com/animals/mammals/facts/arctic-fox </li>
+        <li>https://www.biologicaldiversity.org/species/mammals/Arctic_fox/natural_history.html </li>
+        <li>https://www.learnaboutnature.com/mammals/fox/where-do-foxes-sleep/#:~:text=When%20the%20weather%20gets%20too,help%20them%20to%20stay%20warm.</li>
 
-<h1> references </h1>
-<ol>
-    <li>https://kids.nationalgeographic.com/animals/mammals/facts/arctic-fox </li>
-    <li>https://www.biologicaldiversity.org/species/mammals/Arctic_fox/natural_history.html </li>
-
-
-</ol>
+    </ol>
+    </body>
