--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -4,5 +4,6 @@
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
-
-<p>Use this page to detail your site's privacy policy.</p>
+<body style="background-color: #d3e7fa;">
+    <p>Use this page to detail your site's privacy policy.</p>
+    </body>
