--- a/Pages/donation.cshtml
+++ b/Pages/donation.cshtml
@@ -3,5 +3,19 @@
 @{
     ViewData["Title"] = "Charity";
 }
-<h1>charities or donations</h1>
-<p>https://www.arcticfoxdaily.com/</p>
+
+<body style="background-color: #d3e7fa;">
+    <h1>charities or donations</h1>
+    <h2>arctic fox daily</h2>
+    <p>https://www.arcticfoxdaily.com/</p>
+    <br />
+    <p> they focus more specifically on fox breeds and wilddogs, providing sanctuary and wildlife rehabilitation </p>
+    <br />
+
+
+    <h2>the world wildlife foundation</h2>
+    <p>https://www.worldwildlife.org/species/arctic-fox#:~:text=WWF%20works%20to%20make%20sure,Arctic%20fox%20and%20other%20species.</p>
+    <br />
+    <p> they are more varied in endangered animals they help including the arctic fox</p>
+    
+  </body>
